Add support for smooth normals
Reduces faceting look on curved surfaces

--- a/Source/Light Baker.vcxproj
+++ b/Source/Light Baker.vcxproj
@@ -217,6 +217,7 @@
     <None Include="BakeSkyEmissive.cso" />
     <None Include="BakeSun.cso" />
     <None Include="Baking.hlsli" />
+    <None Include="GenSmoothNormals.cso" />
     <None Include="Light Baker.def" />
   </ItemGroup>
   <ItemGroup>
@@ -257,6 +258,12 @@
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Compute</ShaderType>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Compute</ShaderType>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Compute</ShaderType>
+    </FxCompile>
+    <FxCompile Include="GenSmoothNormals.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Compute</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Compute</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Compute</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Compute</ShaderType>
     </FxCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
