Normal smoothing setting, adjoin traversal refactor/sorting, light fixes
- Added normal smoothing angle to the UI
- Fixed the order of light layer and sectors
- Reworked the scene building and traversal to place adjoins before surfaces so we don't need to traverse twice

--- a/Source/Light Baker.vcxproj.filters
+++ b/Source/Light Baker.vcxproj.filters
@@ -71,7 +71,9 @@
     <None Include="BakeDirect.cso">
       <Filter>Resource Files\Shaders</Filter>
     </None>
-    <None Include="GenSmoothNormals.cso" />
+    <None Include="GenSmoothNormals.cso">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Light Baker.h">
